--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
               <table>
                 <tr>
                   <td>
-                    <p><em>2019- szakmai koordinátor, Szövetség az Életen Át Tartó Tanulásért egyesület</em></p>
+                    <p><em>2019- Szakmai koordinátor Szövetség az Életen Át Tartó Tanulásért egyesület</em></p>
                   </td>
                 </tr>
               </table>
