--- a/index.html
+++ b/index.html
@@ -4,6 +4,30 @@
 <head>
   <meta charset="utf-8">
   <title>Vagrin Csilla - CV</title>
+  <style>
+  body {
+    background-color: #f1fcfc;
+  }
+h1{
+  color: #65587f;
+  font-family: "Arial Black", Gadget, sans-serif;
+}
+h3{
+  color: #65587f;
+  font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
+}
+h4{
+  color: grey;
+  font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
+}
+hr{
+border-top-style: dotted;
+border-style: dotted none none;
+
+border-color: grey;
+border-width: 5px;
+}
+  </style>
 </head>
 
 <body>
