--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@ border-width: 5px;
         <p>
           <h3>Kapcsolat</h3>
           <ul>
-            <li>06-70/517-6285</li>
-            <li>4026 Debrecen, Hajó utca 16. 8/26 </li>
-            <li>vagrin.csilla@yahoo.com</li>
+            <li>06-70/xxx-xxxx</li>
+            <li>4026 Debrecen,  </li>
+            <li>xxx@yahoo.com</li>
           </ul>
       </td>
     </tr>
